--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,44 +1,27 @@
-.bg-dark{
-	font-family: Arial, Helvetica, sans-serif;
-	background-color: #000000!important;
-}
 
-.flip-card {
-  background-color: transparent;
-  min-width: 180px;
-  height: 250px;
-  perspective: 10000px;
-}
 
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-}
+body{
+  .bg-light {
+    background-color: #ebeced !important;
+  }
+  .header{
+    background: url("../img/fondo.jpg") no-repeat;
+    background-size: 100% 100%;
+    min-height: 350px;
 
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
+    .calidadFiltro{
+      width: -moz-available;
+      text-align: left;
+    }
+  }
 
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-  z-index: 2;
-}
-
-.flip-card-back {
-  background-color: #000000;
-  color: white;
-  transform: rotateY(180deg);
-  z-index: 1;
+  footer{
+    background-color: #ebeced;
+    .select-footer{
+      list-style-type: none;
+      li:hover{
+        text-decoration: underline;
+      }
+    }
+  }
 }
