--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,7 @@ body{
     }
   }
 
-  #panel, #panel-fade,#panel-animation{
+  #panel, #panel-fade, #panel-fade-2, #panel-fade-3,#panel-animation{
     display: none;
   }
   .grid-container{
